<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="twenty_percent_button">20%</string>
    <string name="fifteen_percent_button">15%</string>
    <string name="ten_percent_button">10%</string>
    <string name="edit_text_amount_hint">Enter Amount</string>
    <string name="tip_amount_label">Tip is:</string>

</resources>
