<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalculatorActivity" >

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
        android:ems="10"
        android:hint="@string/edit_text_amount_hint" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn15Percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAmount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:text="@string/fifteen_percent_button" />

    <Button
        android:id="@+id/btn20Percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn15Percent"
        android:layout_alignBottom="@+id/btn15Percent"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/btn15Percent"
        android:text="@string/twenty_percent_button" />

    <Button
        android:id="@+id/btn10Percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn15Percent"
        android:layout_alignBottom="@+id/btn15Percent"
        android:layout_marginRight="15dp"
        android:layout_toLeftOf="@+id/btn15Percent"
        android:text="@string/ten_percent_button" />

    <TextView
        android:id="@+id/tvTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn15Percent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:text="@string/tip_amount_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
